@@ -2,7 +2,7 @@ The version number is hardcoded into sdparm.c (in a C string);
 the rpm spec file: sdparm.spec ; the debian/changelog file;
 and the configure.ac file (in the AC_INIT item).
 
-ChangeLog for sdparm-1.09 [20141007] [svn: r252]
+ChangeLog for sdparm-1.09 [20141007] [svn: r253]
   - decode Third Party Copy VPD page
   - Supported block lengths and protection types (sbc4r01) +
     Block device characterics extension VPD pages added
@@ -10,9 +10,10 @@ ChangeLog for sdparm-1.09 [20141007] [svn: r252]
   - device id VPD: T10 vendor identification designator clean up
   - block device characteristics VPD: add HAW_ZBC (sbc4r01)
   - SAS/SPL disconnect-reconnect mpage: expand
+  - SAS protocol specific port mpage: add MAXR field (spl4r01)
   - standard inquiry response (sinq): add LU_CONG
   - change ibm vendor code to lto5 and lto6
-  - point svn:externals to rev 613 of sg3_utils
+  - point svn:externals to rev 614 of sg3_utils
   - upgrade automake to version 1.14.1
   - configure: add --disable-libsgutils so build bypasses that
     library if present
